--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,12 +25,13 @@
 		If not, see &lt;http://www.gnu.org/licenses/&gt;
 	</string>
 	
-	<string name="menu_item_1">Choose Location Provider</string>
-	<string name="menu_item_2">List view</string>
-	<string name="menu_item_3">Search</string>
-	<string name="menu_item_4">Zoom level</string>
-	<string name="menu_item_5">Info</string>
-	<string name="menu_item_6">License</string>
+	<string name="menu_item_1">Zoom level</string>
+	<string name="menu_item_2">Data Source</string>
+	<string name="menu_item_3">List view</string>
+	<string name="menu_item_4">Map view</string>
+	<string name="menu_item_5">Search</string>
+	<string name="menu_item_6">Info</string>
+	<string name="menu_item_7">License</string>
 	
 	
 	<string name="connection_error_dialog">Sorry, a connection Error occured! \nPlease check if you are connected to the Internet.</string>
@@ -42,7 +43,7 @@
 		\nwill not be displayed in the right place.</string>
 	<string name="connection_GPS_dialog_button1">Continue</string>
 	<string name="connection_GPS_dialog_button2">Close</string>
-
 	
+	<string name="no_website_available">Sorry, there is no further \ninformation available.</string>
 
 </resources>
