--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -28,10 +28,10 @@
 		If not, see &lt;http://www.gnu.org/licenses/&gt;
 	</string>
 	
-	<string name="menu_item_1">Radius</string>
-	<string name="menu_item_2">Datenquelle</string>
-	<string name="menu_item_3">Listenansicht</string>
-	<string name="menu_item_4">Karte</string>
+	<string name="menu_item_1">Datenquelle</string>
+	<string name="menu_item_2">Listenansicht</string>
+	<string name="menu_item_3">Karte</string>
+	<string name="menu_item_4">Radius</string>
 	<string name="menu_item_5">Suche</string>
 	<string name="menu_item_6">Info</string>
 	<string name="menu_item_7">Lizenz</string>
@@ -59,5 +59,10 @@
 	<string name="speed">Geschwindigkeit: </string>
 	<string name="acurracy">Genauigkeit: </string>
 	<string name="gps_last_fix">Letztes GPS Update: </string>
+	
+	<string name="map_menu_normal_mode">Karte</string>
+	<string name="map_menu_satellite_mode">Satellit</string>
+	<string name="map_menu_cam_mode">Kamera</string>
+	<string name="map_my_location">Mein Standort</string>
 
 </resources>
