Bug fix for click on current location in map view

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -64,5 +64,8 @@
 	<string name="map_menu_satellite_mode">Satellit</string>
 	<string name="map_menu_cam_mode">Kamera</string>
 	<string name="map_my_location">Mein Standort</string>
+	
+	<string name="map_current_location_click">Dein Standort</string>
+	
 
 </resources>
