--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -62,5 +62,7 @@
 	<string name="map_menu_satellite_mode">Satellite</string>
 	<string name="map_menu_cam_mode">Camera</string>
 	<string name="map_my_location">My Location</string>
+	
+	<string name="map_current_location_click">Your current location</string>
 
 </resources>
