--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -61,5 +61,8 @@
 	<string name="map_menu_satellite_mode">Satellite</string>
 	<string name="map_menu_cam_mode">Telecamera</string>
 	<string name="map_my_location">La mia posizione</string>
+	
+	<string name="map_current_location_click">La tua posizione</string>
+	
 
 </resources>
