--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -66,7 +66,7 @@
 	
 	<string name="data_source_change_wikipedia">Wikipedia è adesso la fonte dei dati</string>
 	<string name="data_source_change_twitter">Twitter è adesso la fonte dei dati</string>
-	<string name="data_source_change_buzz">Google Buz è adesso la fonte dei dati</string>
+	<string name="data_source_change_buzz">Google Buzz è adesso la fonte dei dati</string>
 	<string name="data_source_change_osm">OpenStreetMap è adesso la fonte dei dati</string>
 	
 </resources>
