--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -75,7 +75,7 @@
 	<string name="data_source_change_osm">OpenStreetMap wurde als Datenquelle gewählt</string>
 	
 	<string name="search_failed_notification">Keine Suchergebnisse gefunden</string>
-	<string name="ssource_openstreetmap">Bahnhöfe in der Umgebung</string>
+	<string name="source_openstreetmap">Bahnhöfe in der Umgebung</string>
 	
 	<string name="search_active_1">Suche in der Datenquelle</string>
 	<string name="search_active_2">. Hier klicken um die Suche zu Beenden</string>
