--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -77,7 +77,7 @@
 	<string name="data_source_change_buzz">Se ha cambiado a Buzz como fuente de datos</string>
 	
 	<string name="search_failed_notification">No hay resultados de búsqueda</string>
-	<string name="ssource_openstreetmap">estaciones de tren en la zona</string>
+	<string name="source_openstreetmap">estaciones de tren en la zona</string>
 	
 	<string name="search_active_1">Search on data source</string>
 	<string name="search_active_2">. Touch to terminate search</string>
