--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -72,7 +72,7 @@
 	<string name="data_source_change_osm">OpenStreetMap è adesso la fonte dei dati</string>
 	
 	<string name="search_failed_notification">Nessun risultato di ricerca</string>
-	<string name="ssource_openstreetmap">Stazioni nei dintorni</string>
+	<string name="source_openstreetmap">Stazioni nei dintorni</string>
 	
 	<string name="search_active_1">Ricera nella fonte dei dati di</string>
 	<string name="search_active_2">. Clica qui per terminare la ricerca</string>
