--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -69,5 +69,11 @@
 	<string name="data_source_change_twitter">Changé pour les données Twitter</string>
 	<string name="data_source_change_buzz">Changé pour les données Google Buzz</string>
 	<string name="data_source_change_osm">Changé pour les données OpenStreetMap</string>
+	
+	<string name="search_failed_notification">Aucun résultat</string>
+	<string name="source_openstreetmap">Stations alentours</string>
+	
+	<string name="search_active_1">Recherche dans les données</string>
+	<string name="search_active_2">. Toucher pour terminer la recherche</string>
 		
 </resources>
