--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,4 +77,11 @@
 	
 	<string name="search_active_1">Search on data source</string>
 	<string name="search_active_2">. Touch to terminate search</string>
+	
+	
+	<string name="bus">Busses</string>
+	<string name="stations">Stations</string>
+	<string name="bus_stations">Busses e Stations</string>
+		<string name="nacht">Lange Nacht der Forschung</string>
+	
 </resources>
