Several changes: Download notifications, performance optimization, data source selection bugfix, sort marker by distance, marker limits, marker active flag, larger text boxes, local data support, display distance to object, faster map view, better location detection at startup

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,4 +77,7 @@
 	
 	<string name="search_active_1">Search on data source</string>
 	<string name="search_active_2">. Touch to terminate search</string>
+	<string name="download_error">Error while downloading</string>
+	<string name="download_received">Received data from</string>
+	
 </resources>
