aligned italian strings with upcoming iphone version

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -28,7 +28,7 @@
 		If not, see &lt;http://www.gnu.org/licenses/&gt;
 	</string>
 	
-	<string name="menu_item_1">Scelta dei dati visualizzati</string>
+	<string name="menu_item_1">Scelta delle fonti</string>
 	<string name="menu_item_2">Lista dei risultati</string>
 	<string name="menu_item_3">Mappa</string>
 	<string name="menu_item_4">Raggio visualizzato</string>
