--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,6 +77,8 @@
 	<string name="map_current_location_click">Your current location</string>
 	
 	<string name="data_source_add">Add data source</string>
+	<string name="data_source_edit">Edit data source</string>
+	<string name="data_source_delete">Delete data source</string>
 	<string name="data_source_change_wikipedia">Changed to Wikipedia as data source</string>
 	<string name="data_source_change_twitter">Changed to Twitter as data source</string>
 	<string name="data_source_change_buzz">Changed to Google Buzz as data source</string>
