--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -32,6 +32,12 @@
 		If not, see &lt;http://www.gnu.org/licenses/&gt;
 	</string>
 
+	<string name="launch_plugins">Start plugins?</string>
+	<string name="plugin_message">Er zijn plugins gevonden, wil je die activeren?</string>
+	<string name="remember_this_decision">Onthoud deze beslissing</string>
+	<string name="yes">Ja</string>
+	<string name="no">Nee</string>
+	
 	<string name="menu_item_1">Databron</string>
 	<string name="menu_item_2">Lijst view</string>
 	<string name="menu_item_3">Map view</string>
