Test Commit on Feature brench

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -11,7 +11,7 @@
     <string name="S">S</string>
     <string name="SW">SW</string>
     <string name="W">O</string>
-    <string name="NW">NW</string>
+    <string name="NW">NO</string>
     
 
     <string name="empty_list">Purtroppo non sono disponibili informazioni\nin quest\'area. Provare ad aumentare il raggio.</string>
