--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -14,7 +14,7 @@
     
 
     <string name="empty_list">Lo sentimos, \nNo existe información \nDisponible para este radio.\nPor favor trata de buscar en un radio más grande</string>
-	<string name="option_not_available">Lo sentimos, estamos trabajando en ello... \nEsta opción estará disponible pronto!</string>
+	<string name="option_not_available">Lo sentimos, estamos trabajando en ello... \n¡Esta opción estará disponible pronto!</string>
 	
 	<string name="license">Copyright (C) 2010- Peer internet solutions 
 		\n\nEste programa es software libre: usted puede redistribuirlo y/o modificarlo 
@@ -62,11 +62,11 @@
 	<string name="latitude">Latitud: </string>
 	<string name="altitude">Altitud: </string>
 	<string name="speed">Velocidad: </string>
-	<string name="accuracy">Presición: </string>
+	<string name="accuracy">Precisión: </string>
 	<string name="gps_last_fix">Última posición: </string>
 	
 	<string name="map_menu_normal_mode">Mapa</string>
-	<string name="map_menu_satellite_mode">Satelite</string>
+	<string name="map_menu_satellite_mode">Satélite</string>
 	<string name="map_menu_cam_mode">Cámara</string>
 	<string name="map_my_location">Mi localización</string>
 	
